# Automated-Software-Testing-UDEMY

10_section/: pyproject.toml
10_section/tests/UAT/: content.feature  navidation.feature
10_section/tests/UAT/page_model/: blog_page.py  post_page.py
10_section/tests/UAT/pages/: base_page.py  blog_page.py  home_page.py  new_post_page.py  post_page.py
10_section/tests/UAT/steps/: content.py  interaction.py  navigation.py
1_2_section/1_46-49/: main.py
5_section/: pyproject.toml
5_section/instance/: data.db
5_section/tests/: base_test.py
5_section/tests/integration/models/: test_item.py
5_section/tests/unit/models/: test_item.py
6_section/: pyproject.toml
6_section/tests/integration/: item_test.py  test_store.py
6_section/tests/unit/: item_test.py  unit_base_test.py
