[tool.poetry]
name = "5-section"
version = "0.1.0"
description = ""
authors = ["Fuffes <Fuffes05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
