[tool.poetry]
name = "6-section"
version = "0.1.0"
description = ""
authors = ["Fuffes <Fuffes05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-jwt = "^0.3.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
